--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/css/style.css" />
     <script defer src="src/js/script.js"></script>
   </head>
   <body>
-    <div class="contiainer">TIC TAC TOE</div>
+    <h1 class="heading-1 mt-medium">Tic Tac Toe</h1>
+    <div class="container">
+      <div class="line line--1">&nbsp;</div>
+      <div class="line line--2">&nbsp;</div>
+      <div class="line line--3">&nbsp;</div>
+      <div class="line line--4">&nbsp;</div>
+
+      <div class="shape shape--1" data-num="0"></div>
+      <div class="shape shape--2" data-num="1"></div>
+      <div class="shape shape--3" data-num="2"></div>
+      <div class="shape shape--4" data-num="3"></div>
+      <div class="shape shape--5" data-num="4"></div>
+      <div class="shape shape--6" data-num="5"></div>
+      <div class="shape shape--7" data-num="6"></div>
+      <div class="shape shape--8" data-num="7"></div>
+      <div class="shape shape--9" data-num="8"></div>
+    </div>
   </body>
 </html>
